--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Roberto Villarejo Martínez",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.3.0",
     "google-translate-api": "^2.3.0"
   }
 }
